Bug 165002 - gtk3: Buttons to switch between styles categories in sidebar don't have an accessible name
Summary: gtk3: Buttons to switch between styles categories in sidebar don't have an ac...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:25.8.0 target:25.2.1
Keywords: accessibility
Depends on:
Blocks: a11y-Linux
  Show dependency treegraph
 
Reported: 2025-02-03 07:35 UTC by Michael Weghorn
Modified: 2025-02-04 15:42 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2025-02-03 07:35:36 UTC
Steps to reproduce (on Linux):

1) start the Orca screen reader
2) start LO Writer with the gtk3 VCL plugin (SAL_USE_VCLPLUGIN=gtk3)
3) make sure the sidebar is active and the "Styles" deck is active
4) press F6 until focus is in the sidebar
5) press Tab key until focus is on the "Paragraph Styles" button
6) press right arrow key to move between to the other styles categories ("Character Styles", "Frame Styles",...)

Actual result:

In step 5, Orca just says "Toggle button, pressed", giving the user no clue what this button is about.
Similarly, in step 6, Orca just says "Toggle button, not pressed" for the other buttons.

Expected result:

Orca should announce what these buttons are for, so the user knows what they're for and how to switch to the style category of interest. It should e.g. say "Paragraph Styles, Toggle button, pressed" in step 5.

The problem is that no accessible name is set for those buttons when using the gtk3 VCL plugin.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 08e40accb3fabe676746c40797efc20eaa218801
CPU threads: 32; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2025-02-03 23:34:16 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6f441eba260db39df386c46c5ee7492e79e25c8c

tdf#165002 sidebar a11y: Set a11y names for styles tool buttons

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2025-02-03 23:34:18 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8b221ecd50d2bd7ce84874333c06068e45c774cd

tdf#165002 sidebar a11y: Set a11y names for "Styles" toolbar items in .ui

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-02-03 23:35:21 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bd9666444d0b914d4102a4ce9446148d7e258a0c

tdf#165002 sidebar a11y: Set a11y name on sidebar deck buttons

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-02-04 15:42:38 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/041bf4d58d99893088138a4c614d867718f1346a

tdf#165002 sidebar a11y: Set a11y names for styles tool buttons

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.