tdf#165002 sidebar a11y: Set a11y names for styles tool buttons

For the toolbar buttons to switch between the different
styles categories ("Paragraph Styles", "Character Styles",...)
in the "Styles" sidebar deck, set the tooltip text also as
the accessible name.

This makes the Orca screen reader with announce them
(e.g. "Paragraph styles, toggle button, pressed") when using
the gtk3 VCL plugin instead of just saying "toggle button", which
doesn't give the screen reader any clue what those buttons are for.

Change-Id: I8c30b6b67366d1839acb725bc4af012c276a5ee2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181037
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit 6f441eba260db39df386c46c5ee7492e79e25c8c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181079
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>